# swc-plugin-no-console

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.cargo/: config
src/: config.rs  lib.rs  transform.rs  utils.rs  visitor.rs
tests/: fixture.rs
tests/fixture/excludes/: input.js  output.js
tests/fixture/includes_value/: input.js  output.js
tests/fixture/simple/: input.js  output.js
