[package]
name = "plugin_no_console"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
strip = "symbols"
opt-level = "z"
codegen-units = 1

[dependencies]
serde = "1"
serde_json = "1.0.117"
swc_core = { version = "0.92.*", features = ["ecma_plugin_transform"] }

[dev-dependencies]
swc_ecma_parser = "0.144.1"
swc_ecma_transforms_base = "0.138.2"
swc_ecma_transforms_testing = "0.141.1"
testing = "0.35.24"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
